# img2nl

./: .gitignore  CHANGELOG.md  Makefile  README.md  SUMD.md  SUMR.md  TODO.md  app.doql.less  goal.yaml  index.html  install-dev.sh  planfile.yaml  pyproject.toml
docs/: detection-pipeline.md
project/: README.md  analysis.toon.yaml  calls.mmd  calls.toon.yaml  calls.yaml  compact_flow.mmd  context.md  duplication.toon.yaml  evolution.toon.yaml  flow.mmd  index.html  logic.pl  map.toon.yaml  mermaid.export  planfile-tickets.yaml  project.toon.yaml  prompt.txt
scripts/: build_i18n_catalog.py  messages.extra.json
src/img2nl/: __init__.py  actions.py  analyze.py  api.py  capture.py  cli.py  cli_commands.py  context.py  describe.py  llm_gate.py  plan.py  profiles.py  result.py  thumbnail.py
src/img2nl/features/: __init__.py  adapters.py  barcodes.py  colors.py  dynamics.py  edges.py  extractors.py  fingerprint.py  identify_matchers.py  matchers_common.py  noise.py  objects.py  ocr_text.py  patterns.py  presence_matchers.py  router.py  scene.py  semantic.py  similarity.py  special_hits.py  targets.py  ui_adapter.py
src/img2nl/i18n/: __init__.py  catalog.py  locales.py  messages.json  offline.py  translate.py
testql-scenarios/: generated-cli-tests.testql.toon.yaml
tests/: test_analyze.py  test_detection_layers.py  test_dsl_screenshot.py  test_i18n.py  test_lazy_extractors.py  test_offline_translate.py  test_screenshot_pipeline.py  test_special_layers.py  test_uri2img2nl.py
