[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "img2nl"
version = "0.1.7"
description = "Image → natural language summary with heuristics, thumbnails, and LLM transport hints"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Wronai" }, {name = "Tom Sapletta",email = "tom@sapletta.com"}]
keywords = ["img2nl", "image", "vision", "thumbnail", "analysis"]
dependencies = []

[project.optional-dependencies]
analyze = ["pillow>=10.0", "numpy>=1.24"]
translate = ["argostranslate>=1.9.0"]
opencv = ["opencv-python>=4.8"]
similarity = ["imagehash>=4.3", "scikit-image>=0.22"]
scan = ["pyzbar>=0.1.9"]
ocr = ["rapidocr-onnxruntime>=1.3"]
detect = ["ultralytics>=8.2"]
full = [
    "pillow>=10.0",
    "numpy>=1.24",
    "opencv-python>=4.8",
    "imagehash>=4.3",
    "scikit-image>=0.22",
    "pyzbar>=0.1.9",
]
capture = []
ui = []
desktop = []
dev = ["pytest>=8.0", "pillow>=10.0", "numpy>=1.24",
    "opencv-python>=4.8",
    "imagehash>=4.3",
    "pyzbar>=0.1.9",
    "qrcode>=7.4",
    "goal>=2.1.0",
    "costs>=0.1.20",
    "pfix>=0.1.60",
]

[project.scripts]
img2nl = "img2nl.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/img2nl"]

[tool.hatch.build.targets.wheel.force-include]
"src/img2nl/i18n/messages.json" = "img2nl/i18n/messages.json"

[tool.pytest.ini_options]
testpaths = ["tests", "packages"]
pythonpath = ["src", "packages/dsl2img2nl/src", "packages/uri2img2nl/src"]

[tool.pfix]
# Self-healing Python configuration
model = "openrouter/qwen/qwen3-coder-next"
auto_apply = true
auto_install_deps = true
auto_restart = false
max_retries = 3
create_backups = false
git_auto_commit = false

[tool.pfix.runtime_todo]
enabled = true
todo_file = "TODO.md"
min_severity = "low"
deduplicate = true

[tool.costs]
# AI Cost tracking configuration
badge = true
update_readme = true
readme_path = "README.md"
default_model = "openrouter/qwen/qwen3-coder-next"
analysis_mode = "byok"
full_history = true
max_commits = 500

# Cost thresholds for badge colors (USD)
badge_color_thresholds = { low = 1.0, medium = 5.0, high = 10.0, critical = 50.0 }
